--- a/lms/templates/course.html
+++ b/lms/templates/course.html
@@ -35,7 +35,7 @@ from django.urls import reverse
               data-format="shortDate"
               data-datetime="${course.start.strftime('%Y-%m-%dT%H:%M:%S%z') if course.start else ''}"
               data-language="${LANGUAGE_CODE}"
-              data-string="${_('Starts: {date}')}"
+              data-string="${_('Bắt đầu: {date}')}"
         ></span>
       % endif
     </div>
