--- a/lms/templates/index_overlay.html
+++ b/lms/templates/index_overlay.html
@@ -1,2 +1,2 @@
 <h1>${settings.PLATFORM_NAME}</h1>
-<p>The place for all your online learning</p>
+<p>Nơi hội tụ tất cả khóa học trực tuyến của bạn</p>
