--- a/lms/templates/logout.html
+++ b/lms/templates/logout.html
@@ -2,15 +2,15 @@
 {% load i18n static %}
 {% load django_markup %}
 
-{% block title %}{% trans "Signed Out" as tmsg %}{{ tmsg | force_escape }} | {{ block.super }}{% endblock %}
+{% block title %}{% trans "Đã đăng xuất" as tmsg %}{{ tmsg | force_escape }} | {{ block.super }}{% endblock %}
 
 {% block body %}
     {% if show_tpa_logout_link %}
-        <h1>{% trans "You have signed out." as tmsg %}{{ tmsg | force_escape }}</h1>
+        <h1>{% trans "Bạn đã đăng xuất." as tmsg %}{{ tmsg | force_escape }}</h1>
 
         <p style="text-align: center; margin-bottom: 20px;">
             {% blocktrans trimmed asvar sso_signout_msg %}
-              {start_anchor}{{ tpa_logout_url }}{middle_anchor}Click here{end_anchor} to delete your single signed on (SSO) session.
+              {start_anchor}{{ tpa_logout_url }}{middle_anchor}Nhấn vào đây{end_anchor}để xóa phiên đăng nhập một lần (SSO) của bạn.
             {% endblocktrans %}
             {% interpolate_html sso_signout_msg start_anchor='<a href="' middle_anchor='">'|safe end_anchor='</a>'|safe %}
         </p>
@@ -18,25 +18,24 @@
     {% else %}
         {% if enterprise_target %}
             {% comment %}
-                For enterprise SSO flow we intentionally drop learner's session.
-                We are showing this signin message instead of logout message
-                to avoid any confusion for learner in that case.
+               Dành cho quy trình SSO của doanh nghiệp — hệ thống sẽ tự động kết thúc phiên cũ.
+                Hiển thị thông báo đăng nhập thay vì đăng xuất để tránh gây nhầm lẫn.
             {% endcomment %}
-            <h1>{% trans "We are signing you in." as tmsg %}{{ tmsg | force_escape }}</h1>
+            <h1>{% trans "Hệ thống đang đăng nhập cho bạn." as tmsg %}{{ tmsg | force_escape }}</h1>
 
             <p style="text-align: center; margin-bottom: 20px;">
                 {% filter force_escape %}
                 {% blocktrans %}
-                  This may take a minute. If you are not redirected, go to the home page.
+                 Vui lòng chờ trong giây lát. Nếu không được chuyển hướng, hãy quay lại trang chủ.
                 {% endblocktrans %}
                 {% endfilter %}
             </p>
         {% else %}
-            <h1>{% trans "You have signed out." as tmsg %}{{ tmsg | force_escape }}</h1>
+            <h1>{% trans "Bạn đã đăng xuất." as tmsg %}{{ tmsg | force_escape }}</h1>
 
             <p style="text-align: center; margin-bottom: 20px;">
                 {% blocktrans trimmed asvar signout_msg1 %}
-                  If you are not redirected within 5 seconds, {start_anchor}{{ target }}{middle_anchor}click here to go to the home page{end_anchor}.
+                  Nếu bạn không được chuyển hướng sau 5 giây,{start_anchor}{{ target }}{middle_anchor}nhấn vào đây để quay lại trang chủ{end_anchor}.
                 {% endblocktrans %}
                 {% interpolate_html signout_msg1 start_anchor='<a href="'|safe middle_anchor='">'|safe end_anchor='</a>'|safe %}
             </p>
